@@ -13,6 +13,10 @@ Core and Builtins
 Library
 -------
 
+- Issue #9293: I/O streams now raise ``io.UnsupportedOperation`` when an
+  unsupported operation is attempted (for example, writing to a file open
+  only for reading).
+
 
 What's New in Python 3.2 Alpha 2?
 =================================
